# Domtory_Server

./: .gitignore  docker-compose.yml  pyproject.toml  start.sh
.github/: pull_request_template.md
.github/workflows/: main.yml
board/: admin.py  permissions.py  urls.py
board/migrations/: 0001_initial.py  0002_rename_parent_comment_parent_id_and_more.py  0003_postimage_is_deleted_postimage_is_thumbnail_and_more.py  0004_rename_member_comment_member_id.py  0005_rename_member_id_comment_member_and_more.py  0006_alter_comment_is_blocked_alter_comment_is_deleted_and_more.py  0007_alter_board_table_alter_comment_table_and_more.py  0008_alter_postimage_table.py  0009_post_comment_cnt.py  0010_alter_board_description_alter_board_name_and_more.py  0011_comment_anonymous_number.py  0012_comment_likes_cnt_post_likes_cnt_postmemberlike_and_more.py  0012_create_full_text_index.py  0013_alter_comment_likes_cnt_alter_post_likes_cnt.py  0014_post_bookmark_cnt.py  0015_postmemberbookmark.py  (+2 more)
board/models/: __init__.py  like_models.py  (+5 more)
dorm/: models.py  urls.py
member/: admin.py  containers.py  models.py  tests.py  urls.py
menu/: crawling_view.py  models.py  serializers.py  urls.py  views.py
message/: admin.py  permissions.py  urls.py
notice/: models.py  parser_view.py  serializers.py  urls.py  views.py
push/: admin.py  containers.py  models.py  tasks.py  urls.py
report/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
server/: asgi.py  celery.py  celery_beat.py  urls.py
utils/: connect_dynamodb.py  lookups.py  member_manager.py  s3.py  validators.py
(+173 files in other folders)
