[tool.poetry]
name = "domtory"
version = "0.1.0"
description = ""
authors = ["leehjhjhj <tsukiakarii@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.5"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"
pymysql = "^1.1.0"
gunicorn = "^21.2.0"
requests = "^2.31.0"
django-cors-headers = "^4.2.0"
dependency-injector = "^4.41.0"
firebase-admin = "^6.2.0"
bs4 = "^0.0.1"
drf-yasg = "^1.21.7"
boto3 = "^1.34.34"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^10.2.0"
celery = "^5.3.6"
django-celery-results = "^2.5.1"
gevent = "^23.9.1"
django-storages = "^1.14.2"
django-debug-toolbar = "^4.3.0"
faker = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
